2014-07-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/debug.cc: compile with no warnings when DEBUG
	directive defined.
	* src/adapter/book.cpp: replace weird characters.
	* src/main.cc: copyright year 2014.
	* configure.ac: set version 6.1.2.
	* doc/gnuchess.texi: replace CFLAGS by CPPFLAGS.
	* doc/version.texi: set version 6.1.2.
	* TODO: added new task.
	* NEWS: changes in version 6.1.2.
	* po/LINGUAS: added gl, vi, nb.
	* po/gl.po: added.
	* po/vi.po: added.
	* po/nb.po: added.
	* po/*.po: updated.

2014-07-29  Pawel Koziol <pp.koziol@gmail.com>  (tiny change)

	* src/engine/book.cpp: fix for correct handling of castling moves.

2013-11-23  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: set version 6.1.1.
	* NEWS: changes in version 6.1.1.

2013-11-23  Antonio Ceballos  <aceballos@gmail.com>

	* po/LINGUAS: added pt_BR.
	* po/eo.po: added (forgot to really add it on 2013-11-16).
	* po/pt_BR.po: added.
	* po/nl.po: update.

2013-11-23  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/: *.l renamed as *.ll.
	* src/frontend/: *.c renamed as *.cc.
	* src/frontend/players.cc: cast required in C++.
	* src/frontend/Makefile.am: *.l renamed as *.ll;
	*.c renamed as *.cc.
	* src/main.cc: 'remove extern "C"'.
	* doc/gnuchess.texi: frontend no longer compiled in C; now in C++.

2013-11-23  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: require autoconf 2.69.

2013-11-16  Benno Schulenberg  <bensberg@justemail.net>  (tiny change)

	* src/frontend/cmd.c: small corrections in translatable strings.

2013-11-16  Sebastian Pipping <sebastian@pipping.org>  (tiny change)

	* src/adapter/main.cc: remove extra '>'.

2013-11-16  Antonio Ceballos  <aceballos@gmail.com>

	* po/gnuchess.pot: update.
	* po/LINGUAS: added eo.
	* po/es.po: update.
	* po/nl.po: update.
	* po/eo.po: added.

2013-11-08  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: clean up includes.
	* src/frontend/cmd.c: correct help gextextization.